[package]
name = "rosetta-solana"
version = "0.1.0"
authors = ["imerkle <imerkle@tutanota.com>"]
edition = "2018"
description="Rosetta Server for Solana Blockchain"
license="Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket="0.4.6"
rocket_contrib="0.4.6"
thiserror="1.0.23"
bincode="1.3.1"
hex="0.4.2"
bs58="0.4.0"
base64="0.13.0"
strum = { version = "0.18", features = ["derive"] }
strum_macros="0.20.1"
convert_case="0.4.0"
merge="0.1.0"

spl-token = { version="3.0.1", features = ["no-entrypoint"] }
spl-feature-proposal = { version="1.0.0" }
#spl-token-v3 = { version="3.0.1", features = ["no-entrypoint"] }
spl-associated-token-account = { version="1.0.2", features = ["no-entrypoint"] }
solana-sdk = { version="1.4.17" }
solana-client = { version="1.4.17" }
solana-cli-config = { version="1.4.17" }
solana-metrics = {version="1.4.17" }
solana-transaction-status = { version="1.4.17"}
solana-account-decoder = { version="1.4.17"}
solana-stake-program = { version="1.4.17"}
solana-vote-program = { version="1.4.17"}

[dev-dependencies]
ed25519-dalek = { version = "=1.0.0-pre.4" }
